update dg diagram

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -772,7 +772,7 @@ was executed, we then resets the `[green]#Athletick#` state to this retrieved
 The following sequence diagram shows how the undo operation works:
 
 .Sequence diagram for undo implementation
-image::undoSQ.png[]
+image::undoSQ.png[width="550"]
 
 
 ==== Redo Implementation
@@ -795,7 +795,7 @@ Implementation.]
 The activity diagram for `redo` command is as follows:
 
 .Activity diagram for `redo` command
-image::redoactivity.png[]
+image::redoactivity.png[width="550"]
 
 ==== Design Considerations
 This section describes the pros and cons of the current and other alternative implementations of the undo and redo features.
